# redis-okm

./: README.md  pyproject.toml
docs/: Getter.md  LICENSE  RedisConnect.md  RedisModel.md  exceptions.md  redis-connect.md  redis-model.md  settings.md
redis_okm/: __init__.py  tools.py
redis_okm/core/: __init__.py  configure.py  connection.py  getter.py  redis_model.py
redis_okm/exceptions/: __init__.py  configure_exceptions.py  connection_exceptions.py  getter_exceptions.py  getter_model_exceptions.py  redis_model_exceptions.py
redis_okm/models/: __init__.py  getter_model.py  redis_model.py
redis_okm_tests/: conftest.py
redis_okm_tests/exceptions/test_core/: test_configure_exceptions.py  test_connection_exceptions.py
redis_okm_tests/exceptions/test_models/: test_getter_model_exceptions.py  test_redis_model_exceptions.py
redis_okm_tests/test_core/: test_configure.py  test_connection.py
redis_okm_tests/test_models/: test_getter_model.py  test_redis_model.py
redis_orm/: tools.py
redis_orm/core/: configure.py  connection.py
redis_orm/exceptions/: configure_exceptions.py  connection_exceptions.py  redis_model_exceptions.py
redis_orm/models/: base_model.py  getter_model.py  redis_model.py
redis_orm_tests/: conftest.py
redis_orm_tests/exceptions/test_core/: test_configure_exceptions.py  test_connection_exceptions.py
redis_orm_tests/exceptions/test_models/: test_base_model_exceptions.py  (+2 more)
redis_orm_tests/test_core/: test_configure.py  test_connection.py
redis_orm_tests/test_models/: test_base_model.py  test_getter_model.py  test_redis_model.py
