[tool.poetry]
name = "redis-okm"
version = "0.1.0"
description = "Mini OKM para REDIS"
authors = ["paulindavzl <paulochz01@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include="redis_okm"}
]

[tool.poetry.dependencies]
python = ">=3.13, <3.14"
redis = "^5.2.1"
pytest = "^8.3.5"
python-dotenv = "^1.1.0"
fakeredis = "^2.28.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

